5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1638_2450.log
== TEST (2019-04-09 10:36:56) 
-- CODE:
n1 = input("nome")
n2 = input("nome")

if(n1.upper())
	print(n1)
	print(n2)
-- ERROR:
File "XXXX", line 4
    if(n1.upper())
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:37:02) 
-- CODE:
n1 = input("nome")
n2 = input("nome")

if(n1.upper()):
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:59) 
-- CODE:
n1 = input("nome")
n2 = input("nome")

if(n1.upper()):
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper()):
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:21) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 .upper()):
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:35) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper()):
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:52:53) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper()):
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:54:28) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
-- EXECUTION TIME:
0.211948
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Marcos
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:28) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:39) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(.upper()(n1))
	print(n2)
else:
	print(n2)
	print(n1)
-- ERROR:
File "XXXX", line 5
    print(.upper()(n1))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:42) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(.upper()(n1)
	print(n2)
else:
	print(n2)
	print(n1)
-- ERROR:
File "XXXX", line 5
    print(.upper()(n1)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:53) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(.upper(n1))
	print(n2)
else:
	print(n2)
	print(n1)
-- ERROR:
File "XXXX", line 5
    print(.upper(n1))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:02) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(.upper()n1)
	print(n2)
else:
	print(n2)
	print(n1)
-- ERROR:
File "XXXX", line 5
    print(.upper()n1)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:23) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(n1)
	print(n2)
else:
	print(n2)
	print(n1)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:56:55) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- EXECUTION TIME:
0.219369
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:56) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1 >= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:57:38) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper() >= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:57:57) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper() >= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- EXECUTION TIME:
0.19266
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:58:21) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper()>= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:58:23) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1.upper()>= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- EXECUTION TIME:
0.188125
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:59:40) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(.upper() n1 >= n2):
	print(n2)
	print(n1)
else:
	print(n1)
	print(n2)
-- ERROR:
File "XXXX", line 4
    if(.upper() n1 >= n2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:00:38) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n2)
	print(n3)
else:
	print(n3)
	print(n2)
-- OUTPUT:
ADA
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:00:46) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n2)
	print(n3)
else:
	print(n3)
	print(n2)
-- EXECUTION TIME:
0.230976
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:05) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.178417
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:06) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.171619
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
Leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.163508
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
MARCOS
Demetrius
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:01:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.415395
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.387648
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.314804
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
george
WILSON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: MARCOS
Demetrius
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:01:08) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()


if(n3 >= n2):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.327801
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
george
WILSON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:39:53) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n4 = n2.upper()

if(n3 >= n2):
	n3 = n1.upper()
	print(n3)
	print(n2)
else:
	n4 = n2.upper()
	print(n2)
	print(n3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(n3 >= n2):
NameError: name 'n3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:09) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n3 >= n2):
	n3 = n1.upper()
	print(n3)
	print(n2)
else:
	n4 = n2.upper()
	print(n2)
	print(n3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(n3 >= n2):
NameError: name 'n3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:24) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1>= n2):
	n3 = n1.upper()
	print(n3)
	print(n2)
else:
	n4 = n2.upper()
	print(n2)
	print(n3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(n3)
NameError: name 'n3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:40:44) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1>= n2):
	n3 = n1.upper()
	print(n2)
	print(n3)
else:
	n4 = n2.upper()
	print(n3)
	print(n2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(n3)
NameError: name 'n3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:40:51) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")

if(n1>= n2):
	n3 = n1.upper()
	print(n2)
	print(n3)
else:
	n4 = n2.upper()
	print(n3)
	print(n2)
-- EXECUTION TIME:
0.120729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2450/main.py", line 10, in <module>
    print(n3)
NameError: name 'n3' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:45) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- OUTPUT:
Leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:41:46) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	print(n3)
	print(n2)
else:
	print(n2)
	print(n3)
-- EXECUTION TIME:
0.137727
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:42:48) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:42:56) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.138275
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:44:01) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4.lower()
	print(n3)
	print(n4)
else:
	print(n3)
	print(n4)
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:44:50) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4.lower()
	print(n4)
	print(n3)
else:
	n3.lower()
	print(n3)
	print(n4)
-- OUTPUT:
ADA
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:53) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4= n5.lower()
	print(n5)
	print(n3)
else:
	n6.lower()
	print(n6)
	print(n4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n6.lower()
NameError: name 'n6' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:09) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n5.lower()
	print(n5)
	print(n3)
else:
	n3 = n6.lower()
	print(n6)
	print(n4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n3 = n6.lower()
NameError: name 'n6' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:59) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n.lower()
	print(n)
	print(n3)
else:
	n3 = n6.lower()
	print(n6)
	print(n4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n3 = n6.lower()
NameError: name 'n6' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:47) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n6.lower()
	print(n6)
	print(n4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    n3 = n6.lower()
NameError: name 'n6' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:13) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- OUTPUT:
ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:22) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- OUTPUT:
ada
LEON
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:48:29) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.168195
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ada
LEON
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
demetrius
MARCOS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:30) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.172344
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
nome: nome: LEON
ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
nome: nome: MARCOS
demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:32) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.131862
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
LEON
ada
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:32) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.222031
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
WILSON
george
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
LEON
ada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:32) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.273997
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
WILSON
george
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
LEON
ada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:33) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.238556
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
MARCOS
demetrius
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
WILSON
george
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:33) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.181273
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
WILSON
george
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
LEON
ada
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:33) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.287743
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
WILSON
george
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
LEON
ada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:33) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.222996
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:34) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.218184
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
MARCOS
demetrius
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
WILSON
george
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:34) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.317773
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:34) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.240505
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
MARCOS
demetrius
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:34) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.240341
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
LEON
ada
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
MARCOS
demetrius
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:35) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.378014
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:35) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 >= n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.321165
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
WILSON
george
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:55) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.133655
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
wilson
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:49:56) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- OUTPUT:
ADA
leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:22) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.12158
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:23) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.13693
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:23) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.251707
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:23) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.167933
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
marcos
DEMETRIUS
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
wilson
GEORGE
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:24) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.208625
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
wilson
GEORGE
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:24) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.291341
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
marcos
DEMETRIUS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:24) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.170653
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:25) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.306431
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:25) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 >= n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.266773
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
wilson
GEORGE
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:50:45) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- OUTPUT:
leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:47) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.130679
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:48) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.144927
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
marcos
DEMETRIUS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:49) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.142514
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:49) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.122638
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:49) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.211349
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:50) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.584709
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:50) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.393534
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:50) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.244526
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
wilson
GEORGE
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:50) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.389267
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:51) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n4)
	print(n3)
else:
	n3 = n3.lower()
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.452232
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
nome: nome: marcos
DEMETRIUS
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:03) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- OUTPUT:
ADA
leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:05) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.161633
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
wilson
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.189329
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
ADA
leon
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
DEMETRIUS
marcos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.24042
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
DEMETRIUS
marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
ADA
leon
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.187211
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
GEORGE
wilson
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
ADA
leon
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
DEMETRIUS
marcos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:08) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.318667
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
GEORGE
wilson
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:

-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
DEMETRIUS
marcos
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:08) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.501955
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:08) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.372497
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
ADA
leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
GEORGE
wilson
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:51:08) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n4 > n3):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.391573
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:52:03) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- OUTPUT:
leon
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:04) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.194918
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:05) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.101691
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:05) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.0920959
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:06) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.118354
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
marcos
DEMETRIUS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:06) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.124098
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
marcos
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
wilson
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:06) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.192739
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
wilson
GEORGE
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
marcos
DEMETRIUS
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.142867
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
leon
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
leon
ADA
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
leon
ADA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.167852
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:52:07) 
-- CODE:
n1 = input("nome: ")
n2 = input("nome: ")
n3 = n1.upper()
n4 = n2.upper()

if(n3 > n4):
	n3 = n3.lower()
	print(n3)
	print(n4)
else:
	n4 = n4.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.233595
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1638/2450/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:36:34) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n3 > n4):
	n3 = n3.upper()
	print(n3)
	print(n4)
else:
	n4 = n4.upper()
	print(n4)
	print(n3)
-- OUTPUT:
LEON
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:36:43) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n3 > n4):
	n3 = n3.upper()
	print(n3)
	print(n4)
else:
	n4 = n4.upper()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.125215
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
Ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
Demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
GEORGE
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:38:18) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")
n4 = n4.upper()
n3 = n3.upper()
if(n3 > n4):
	print(n3)
	print(n4)
else:
	print(n4)
	print(n3)
-- OUTPUT:
LEON
ADA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:38:22) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")
n4 = n4.upper()
n3 = n3.upper()
if(n3 > n4):
	print(n3)
	print(n4)
else:
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.191012
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ADA
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
DEMETRIUS
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
GEORGE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:39:04) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")
n4 = n4.upper()
n3 = n3.upper()
if(n3 > n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.139276
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
LEON
ada
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
MARCOS
demetrius
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
WILSON
george
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:39:05) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")
n4 = n4.upper()
n3 = n3.upper()
if(n3 > n4):
	n4 = n4.lower()
	print(n3)
	print(n4)
else:
	n3 = n3.lower()
	print(n4)
	print(n3)
-- OUTPUT:
LEON
ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:19:01) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() > n3.upper()):
	print(n3)
	print(n4)
else:
	print(n4)
	print(n3)
-- EXECUTION TIME:
0.142169
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
nome: nome: Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:19:01) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() > n3.upper()):
	print(n3)
	print(n4)
else:
	print(n4)
	print(n3)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:19:18) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() > n3.upper()):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:19:42) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() > n3.upper()):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- OUTPUT:
Leon
Ada
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:20:20) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() < n3.upper()):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 13:20:31) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() < n3.upper()):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- OUTPUT:
Ada
Leon
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:20:31) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() < n3.upper()):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.202373
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
nome: nome: Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
nome: nome: Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
nome: nome: george
WILSON
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 13:20:33) 
-- CODE:
n3 = input("nome: ")
n4 = input("nome: ")

if(n4.upper() < n3.upper()):
	print(n4)
	print(n3)
else:
	print(n3)
	print(n4)
-- EXECUTION TIME:
0.142628
-- TEST CASE 1:
---- input:
Ada
Leon
---- correct output:
Ada
Leon
---- user output:
Ada
Leon
-- TEST CASE 2:
---- input:
Marcos
Demetrius
---- correct output:
Demetrius
Marcos
---- user output:
Demetrius
Marcos
-- TEST CASE 3:
---- input:
WILSON
george
---- correct output:
george
WILSON
---- user output:
george
WILSON
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
